--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"firebase": "^11.10.0"
+		"dotenv": "^17.0.1",
+		"firebase": "^11.10.0",
+		"firebase-admin": "^13.4.0"
 	}
 }
