--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"dotenv": "^17.0.1",
 		"firebase": "^11.10.0",
-		"firebase-admin": "^13.4.0"
+		"firebase-admin": "^13.4.0",
+		"googleapis": "^150.0.1"
 	}
 }
