--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dotenv": "^17.0.1",
 		"firebase": "^11.10.0",
 		"firebase-admin": "^13.4.0",
-		"googleapis": "^150.0.1"
+		"googleapis": "^150.0.1",
+		"multer": "^2.0.1"
 	}
 }
